@@ -2,8 +2,8 @@ package sn.babacar.alten.test.services.impl;
 
 import jakarta.persistence.EntityExistsException;
 import jakarta.persistence.EntityNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -16,7 +16,6 @@ import sn.babacar.alten.test.services.ProductService;
 import sn.babacar.alten.test.util.Constants;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -27,82 +26,133 @@ public class ProductServiceImpl implements ProductService {
   private final ProductMapper productMapper;
 
   @Override
+  @Transactional(rollbackFor = Exception.class)
   public ProductDTO createProduct(ProductDTO productDTO) throws CustomException {
+    if (productDTO == null) {
+      throw new CustomException(
+          new IllegalArgumentException("Product data is required"),
+          Constants.PRODUCT_POST_FAILURE_ILLEGAL_ARGUMENT
+      );
+    }
+
+    log.info("Creating new product: {}", productDTO);
+
     try {
       if (productDTO.getCode() != null && productRepository.existsByCode(productDTO.getCode())) {
-        throw new EntityExistsException("Product with code " + productDTO.getCode() + " already exists");
+        throw new CustomException(
+            new EntityExistsException("Product with code " + productDTO.getCode() + " already exists"),
+            Constants.PRODUCT_POST_FAILURE_ENTITY_EXIST
+        );
       }
 
       Product product = productMapper.toEntity(productDTO);
       Product savedProduct = productRepository.save(product);
 
       return productMapper.toDto(savedProduct);
-    } catch (EntityExistsException e) {
-      throw new CustomException(Constants.PRODUCT_POST_FAILURE_ENTITY_EXIST, e);
+    } catch (CustomException e) {
+      throw e;
     } catch (Exception e) {
-      throw new CustomException(Constants.PRODUCT_POST_FAILURE, e);
+      throw new CustomException(e, Constants.PRODUCT_POST_FAILURE);
     }
   }
 
   @Override
-  public List<ProductDTO> getAllProducts() {
-    List<Product> products = productRepository.findAll();
-    return products.stream()
-        .map(productMapper::toDto)
-        .collect(Collectors.toList());
+  @Transactional(readOnly = true)
+  public List<ProductDTO> getAllProducts() throws CustomException {
+    try {
+      List<Product> products = productRepository.findAll();
+      return products.stream()
+          .map(productMapper::toDto)
+          .toList();
+    } catch (Exception e) {
+      throw new CustomException(e, Constants.PRODUCT_GET_FAILURE);
+    }
   }
 
   @Override
+  @Transactional(readOnly = true)
   public ProductDTO getProductById(Long id) throws CustomException {
+    if (id == null) {
+      throw new CustomException(
+          new IllegalArgumentException("Product ID is required"),
+          Constants.PRODUCT_GET_FAILURE_ILLEGAL_ARGUMENT
+      );
+    }
+
     try {
       Product product = productRepository.findById(id)
-          .orElseThrow(() -> new EntityNotFoundException("Product not found with id: " + id));
+          .orElseThrow(() -> new CustomException(
+              new EntityNotFoundException("Product not found with id: " + id),
+              Constants.PRODUCT_GET_FAILURE_NOT_FOUND
+          ));
 
       return productMapper.toDto(product);
-    } catch (EntityNotFoundException e) {
-      throw new CustomException(Constants.PRODUCT_GET_FAILURE_NOT_FOUND, e);
+    } catch (CustomException e) {
+      throw e;
     } catch (Exception e) {
-      throw new CustomException(Constants.PRODUCT_GET_FAILURE, e);
+      throw new CustomException(e, Constants.PRODUCT_GET_FAILURE);
     }
   }
 
   @Override
+  @Transactional(rollbackFor = Exception.class)
   public ProductDTO updateProduct(Long id, ProductDTO productDTO) throws CustomException {
+    if (id == null || productDTO == null) {
+      throw new CustomException(
+          new IllegalArgumentException("Product ID and data are required"),
+          Constants.PRODUCT_PUT_FAILURE_ILLEGAL_ARGUMENT
+      );
+    }
+
+    log.info("Updating product with id: {} with data: {}", id, productDTO);
+
     try {
       Product existingProduct = productRepository.findById(id)
-          .orElseThrow(() -> new EntityNotFoundException("Product not found with id: " + id));
+          .orElseThrow(() -> new CustomException(
+              new EntityNotFoundException("Product not found with id: " + id),
+              Constants.PRODUCT_GET_FAILURE_NOT_FOUND
+          ));
 
       if (productDTO.getCode() != null && !productDTO.getCode().equals(existingProduct.getCode())
           && productRepository.existsByCode(productDTO.getCode())) {
-        throw new EntityExistsException("Product with code " + productDTO.getCode() + " already exists");
+        throw new CustomException(
+            new EntityExistsException("Product with code " + productDTO.getCode() + " already exists"),
+            Constants.PRODUCT_POST_FAILURE_ENTITY_EXIST
+        );
       }
 
       productMapper.updateProductFromDto(productDTO, existingProduct);
-
       Product updatedProduct = productRepository.save(existingProduct);
       return productMapper.toDto(updatedProduct);
-    } catch (EntityNotFoundException e) {
-      throw new CustomException(Constants.PRODUCT_GET_FAILURE_NOT_FOUND, e);
-    } catch (EntityExistsException e) {
-      throw new CustomException(Constants.PRODUCT_POST_FAILURE_ENTITY_EXIST, e);
-    } catch (IllegalArgumentException e) {
-      throw new CustomException(Constants.PRODUCT_GET_FAILURE_ILLEGAL_ARGUMENT, e);
+    } catch (CustomException e) {
+      throw e;
     } catch (Exception e) {
-      throw new CustomException(Constants.PRODUCT_PUT_FAILURE, e);
+      throw new CustomException(e, Constants.PRODUCT_PUT_FAILURE);
     }
   }
 
   @Override
+  @Transactional(rollbackFor = Exception.class)
   public void deleteProduct(Long id) throws CustomException {
+    if (id == null) {
+      throw new CustomException(
+          new IllegalArgumentException("Product ID is required"),
+          Constants.PRODUCT_DELETE_FAILURE_ILLEGAL_ARGUMENT
+      );
+    }
+
     try {
       if (!productRepository.existsById(id)) {
-        throw new EntityNotFoundException("Product not found with id: " + id);
+        throw new CustomException(
+            new EntityNotFoundException("Product not found with id: " + id),
+            Constants.PRODUCT_GET_FAILURE_NOT_FOUND
+        );
       }
       productRepository.deleteById(id);
-    } catch (EntityNotFoundException e) {
-      throw new CustomException(Constants.PRODUCT_GET_FAILURE_NOT_FOUND, e);
+    } catch (CustomException e) {
+      throw e;
     } catch (Exception e) {
-      throw new CustomException("Error deleting product", e);
+      throw new CustomException(e, Constants.PRODUCT_DELETE_FAILURE);
     }
   }
 }
